salesforce/force-app/main/default/objects/SmartDocs_Data_Source__c/SmartDocs_Data_Source__c.object-meta.xml
<CustomObject>
    <label>SmartDocs Data Source</label>
    <nameField>
        <label>Data Source Name</label>
        <type>AutoNumber</type>
        <displayFormat>SDS-{0000}</displayFormat>
    </nameField>
    <pluralLabel>SmartDocs Data Sources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Defines a data source for a template mapping. Each mapping can have multiple data sources — one primary (the starting record) and additional sources for related objects.</description>
</CustomObject>