salesforce/force-app/main/default/objects/SmartDocs_Data_Source__c/fields/Filter_Condition__c.field-meta.xml
<CustomField>
    <fullName>Filter_Condition__c</fullName>
    <label>Filter Condition</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>