salesforce/force-app/main/default/objects/SmartDocs_Data_Source__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <label>Primary Source</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>