salesforce/force-app/main/default/objects/SmartDocs_Data_Source__c/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <label>Relationship Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>