salesforce/force-app/main/default/objects/SmartDocs_Data_Source__c/fields/Relationship_Path__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Path__c</fullName>
    <label>Relationship Path</label>
    <type>Text</type>
    <length>255</length>
</CustomField>