salesforce/force-app/main/default/objects/SmartDocs_Data_Source__c/fields/SmartDocs_Template_Mapping__c.field-meta.xml
<CustomField>
    <fullName>SmartDocs_Template_Mapping__c</fullName>
    <label>Template Mapping</label>
    <type>MasterDetail</type>
    <referenceTo>SmartDocs_Template_Mapping__c</referenceTo>
    <relationshipName>SmartDocs_Data_Sources</relationshipName>
    <relationshipLabel>Data Sources</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
</CustomField>