salesforce/force-app/main/default/objects/SmartDocs_Data_Source__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>primary</fullName><default>true</default><label>Primary (Starting Record)</label></value>
            <value><fullName>child_relationship</fullName><default>false</default><label>Child Relationship</label></value>
            <value><fullName>lookup</fullName><default>false</default><label>Lookup Traversal</label></value>
            <value><fullName>custom_query</fullName><default>false</default><label>Custom Query</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>