salesforce/force-app/main/default/objects/SmartDocs_Data_Source__c/fields/Template_Array_Path__c.field-meta.xml
<CustomField>
    <fullName>Template_Array_Path__c</fullName>
    <label>Template Array Path</label>
    <type>Text</type>
    <length>255</length>
</CustomField>